--- a/src/index.css
+++ b/src/index.css
@@ -23,8 +23,6 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -51,4 +49,31 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+/* scrollbar controls */
+
+
+
+/* width */
+::-webkit-scrollbar {
+  width: 8px;
+  /* make it thinner */
+}
+
+/* Track (background) */
+::-webkit-scrollbar-track {
+  background: transparent;
+  /* or a subtle color */
+}
+
+/* Handle (the draggable part) */
+::-webkit-scrollbar-thumb {
+  background: rgba(100, 100, 100, 0.4);
+  border-radius: 3px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(100, 100, 100, 0.9);
 }
