--- a/src/pages/MainPage.css
+++ b/src/pages/MainPage.css
@@ -20,35 +20,35 @@ html {
 .main-photo{
     background-color: rgb(36, 36, 36);
     height:100vh;
-    width:100vw;
+    width:100%;
 }
 
 .info{
        background-color: rgb(82, 82, 82);
     height:100vh;
-    width:100vw;
+    width:100%;
 }
 
 .works{
      background-color: rgb(36, 36, 36);
     height:100vh;
-    width:100vw;
+    width:100%;
 }
 
 .about{
     background-color: rgb(233, 179, 179);
     height:100vh;
-    width:100vw;
+    width:100%;
 }
 
 .clients{
         background-color: rgb(82, 82, 82);
     height:100vh;
-    width:100vw;
+    width:100%;
 }
 
 .modal-works{
-   height: 700px;
+   height: 1500px;
 }
 
 .footer{
